--- a/src/output.css
+++ b/src/output.css
@@ -605,48 +605,48 @@ video {
   bottom: -8rem;
 }
 
-.left-24 {
-  left: 6rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-\] {
-  top: -;
-}
-
-.top-\[-30ox\] {
-  top: -30ox;
-}
-
-.top-\[-30px\] {
-  top: -30px;
-}
-
-.top-\[-40px\] {
-  top: -40px;
-}
-
 .left-1\/2 {
   left: 50%;
 }
 
-.top-\[-50px\] {
-  top: -50px;
-}
-
-.top-\[-70px\] {
-  top: -70px;
+.left-24 {
+  left: 6rem;
 }
 
 .top-\[-90px\] {
   top: -90px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.-bottom-0 {
+  bottom: -0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .z-10 {
   z-index: 10;
+}
+
+.m-9 {
+  margin: 2.25rem;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -721,8 +721,16 @@ video {
   margin-top: 2rem;
 }
 
-.mb-11 {
-  margin-bottom: 2.75rem;
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .block {
@@ -749,8 +757,16 @@ video {
   height: 2.5rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-14 {
   height: 3.5rem;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .h-\[250px\] {
@@ -777,12 +793,20 @@ video {
   height: auto;
 }
 
-.h-32 {
-  height: 8rem;
+.h-96 {
+  height: 24rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-\[480px\] {
+  height: 480px;
+}
+
+.h-\[486px\] {
+  height: 486px;
+}
+
+.h-60 {
+  height: 15rem;
 }
 
 .w-10 {
@@ -805,6 +829,10 @@ video {
   width: 400px;
 }
 
+.w-\[700px\] {
+  width: 700px;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -813,24 +841,24 @@ video {
   width: 100%;
 }
 
-.w-\[134px\] {
-  width: 134px;
+.w-\[46px\] {
+  width: 46px;
 }
 
-.w-\[750px\] {
-  width: 750px;
+.w-\[464px\] {
+  width: 464px;
 }
 
-.w-\[650px\] {
-  width: 650px;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-\[700px\] {
-  width: 700px;
+.w-40 {
+  width: 10rem;
 }
 
-.w-32 {
-  width: 8rem;
+.w-\[90\] {
+  width: 90;
 }
 
 .flex-shrink-0 {
@@ -878,6 +906,10 @@ video {
   align-items: stretch;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -902,16 +934,16 @@ video {
   gap: 0.5rem;
 }
 
+.gap-28 {
+  gap: 7rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
 
 .gap-\[22px\] {
   gap: 22px;
-}
-
-.gap-28 {
-  gap: 7rem;
 }
 
 .gap-y-3 {
@@ -924,6 +956,10 @@ video {
 
 .gap-y-8 {
   row-gap: 2rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -972,16 +1008,25 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.fill-white {
-  fill: #fff;
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-\[10px\] {
   padding: 10px;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-4 {
+  padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-16 {
@@ -1039,25 +1084,17 @@ video {
   padding-bottom: 25px;
 }
 
-.py-28 {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-12 {
   padding-bottom: 3rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pt-28 {
-  padding-top: 7rem;
+.pb-36 {
+  padding-bottom: 9rem;
 }
 
 .pb-8 {
@@ -1068,16 +1105,40 @@ video {
   padding-top: 5rem;
 }
 
-.pb-28 {
-  padding-bottom: 7rem;
+.pt-28 {
+  padding-top: 7rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.pb-36 {
-  padding-bottom: 9rem;
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pb-60 {
+  padding-bottom: 15rem;
+}
+
+.pb-52 {
+  padding-bottom: 13rem;
+}
+
+.pb-48 {
+  padding-bottom: 12rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pb-56 {
+  padding-bottom: 14rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .text-center {
@@ -1119,6 +1180,11 @@ video {
   line-height: 1rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1136,6 +1202,11 @@ video {
   color: rgb(44 194 165 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-secendary {
   --tw-text-opacity: 1;
   color: rgb(22 168 170 / var(--tw-text-opacity));
@@ -1144,11 +1215,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .shadow-md {
@@ -1216,13 +1282,57 @@ video {
   content: var(--tw-content);
 }
 
+@media (min-width: 640px) {
+  .sm\:inset-x-0 {
+    left: 0px;
+    right: 0px;
+  }
+
+  .sm\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .sm\:m-auto {
+    margin: auto;
+  }
+
+  .sm\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-\[72px\] {
+    height: 72px;
+  }
+
+  .md\:h-\[486px\] {
+    height: 486px;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-\[295px\] {
+    width: 295px;
   }
 
   .md\:grid-cols-2 {
@@ -1236,7 +1346,118 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:left-24 {
+    left: 6rem;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
+
+  .lg\:-bottom-32 {
+    bottom: -8rem;
+  }
+
+  .lg\:m-0 {
+    margin: 0px;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-\[486px\] {
+    height: 486px;
+  }
+
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .lg\:h-96 {
+    height: 24rem;
+  }
+
+  .lg\:w-\[464px\] {
+    width: 464px;
+  }
+
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[6\] {
+    width: 6;
+  }
+
+  .lg\:w-\[662px\] {
+    width: 662px;
+  }
+
+  .lg\:w-\[350px\] {
+    width: 350px;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-y-8 {
+    row-gap: 2rem;
+  }
+
+  .lg\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .lg\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:px-\[100px\] {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .lg\:px-\[102px\] {
+    padding-left: 102px;
+    padding-right: 102px;
+  }
+
+  .lg\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
   }
 }
