--- a/src/output.css
+++ b/src/output.css
@@ -601,48 +601,48 @@ video {
   right: 0px;
 }
 
-.-bottom-32 {
-  bottom: -8rem;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.left-24 {
-  left: 6rem;
-}
-
-.top-\[-90px\] {
-  top: -90px;
-}
-
 .bottom-0 {
   bottom: 0px;
-}
-
-.-bottom-0 {
-  bottom: -0px;
 }
 
 .left-0 {
   left: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.top-\[-90px\] {
+  top: -90px;
+}
+
+.top-full {
+  top: 100%;
+}
+
+.left-56 {
+  left: 14rem;
+}
+
+.top-11 {
+  top: 2.75rem;
+}
+
+.-left-56 {
+  left: -14rem;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.m-9 {
-  margin: 2.25rem;
-}
-
-.m-4 {
-  margin: 1rem;
+.z-20 {
+  z-index: 20;
 }
 
 .m-auto {
@@ -667,6 +667,16 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-3 {
@@ -717,20 +727,24 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
 
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -773,60 +787,20 @@ video {
   height: 250px;
 }
 
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[72px\] {
-  height: 72px;
-}
-
 .h-\[91px\] {
   height: 91px;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[480px\] {
-  height: 480px;
-}
-
-.h-\[486px\] {
-  height: 486px;
-}
-
-.h-60 {
-  height: 15rem;
 }
 
 .w-10 {
   width: 2.5rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .w-\[200px\] {
   width: 200px;
-}
-
-.w-\[295px\] {
-  width: 295px;
-}
-
-.w-\[350px\] {
-  width: 350px;
-}
-
-.w-\[400px\] {
-  width: 400px;
 }
 
 .w-\[700px\] {
@@ -839,26 +813,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[46px\] {
-  width: 46px;
-}
-
-.w-\[464px\] {
-  width: 464px;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[90\] {
-  width: 90;
 }
 
 .flex-shrink-0 {
@@ -950,14 +904,6 @@ video {
   row-gap: 0.75rem;
 }
 
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
-
-.gap-y-8 {
-  row-gap: 2rem;
-}
-
 .gap-y-4 {
   row-gap: 1rem;
 }
@@ -972,6 +918,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border-t {
@@ -1008,35 +958,30 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.p-\[10px\] {
-  padding: 10px;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-\[10px\] {
+  padding: 10px;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-28 {
-  padding-left: 7rem;
-  padding-right: 7rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1049,16 +994,6 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-\[100px\] {
-  padding-left: 100px;
-  padding-right: 100px;
-}
-
-.px-\[102px\] {
-  padding-left: 102px;
-  padding-right: 102px;
-}
-
 .px-\[19px\] {
   padding-left: 19px;
   padding-right: 19px;
@@ -1069,32 +1004,25 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
 .py-\[25px\] {
   padding-top: 25px;
   padding-bottom: 25px;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .pb-12 {
   padding-bottom: 3rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pb-36 {
   padding-bottom: 9rem;
+}
+
+.pb-56 {
+  padding-bottom: 14rem;
 }
 
 .pb-8 {
@@ -1113,34 +1041,6 @@ video {
   padding-top: 1rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pb-60 {
-  padding-bottom: 15rem;
-}
-
-.pb-52 {
-  padding-bottom: 13rem;
-}
-
-.pb-48 {
-  padding-bottom: 12rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-56 {
-  padding-bottom: 14rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1153,6 +1053,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-base {
@@ -1178,11 +1083,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -1282,28 +1182,9 @@ video {
   content: var(--tw-content);
 }
 
-@media (min-width: 640px) {
-  .sm\:inset-x-0 {
-    left: 0px;
-    right: 0px;
-  }
-
-  .sm\:bottom-0 {
-    bottom: 0px;
-  }
-
-  .sm\:m-auto {
-    margin: auto;
-  }
-
-  .sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 768px) {
@@ -1321,10 +1202,6 @@ video {
 
   .md\:h-\[72px\] {
     height: 72px;
-  }
-
-  .md\:h-\[486px\] {
-    height: 486px;
   }
 
   .md\:w-1\/3 {
@@ -1346,16 +1223,12 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:left-24 {
-    left: 6rem;
-  }
-
-  .lg\:top-0 {
-    top: 0px;
-  }
-
   .lg\:-bottom-32 {
     bottom: -8rem;
+  }
+
+  .lg\:left-40 {
+    left: 10rem;
   }
 
   .lg\:m-0 {
@@ -1378,6 +1251,10 @@ video {
     display: flex;
   }
 
+  .lg\:h-96 {
+    height: 24rem;
+  }
+
   .lg\:h-\[486px\] {
     height: 486px;
   }
@@ -1386,28 +1263,16 @@ video {
     height: 500px;
   }
 
-  .lg\:h-96 {
-    height: 24rem;
+  .lg\:w-\[350px\] {
+    width: 350px;
   }
 
   .lg\:w-\[464px\] {
     width: 464px;
   }
 
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[6\] {
-    width: 6;
-  }
-
   .lg\:w-\[662px\] {
     width: 662px;
-  }
-
-  .lg\:w-\[350px\] {
-    width: 350px;
   }
 
   .lg\:grid-cols-3 {
@@ -1418,24 +1283,14 @@ video {
     row-gap: 2rem;
   }
 
-  .lg\:px-28 {
-    padding-left: 7rem;
-    padding-right: 7rem;
-  }
-
   .lg\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
   }
 
-  .lg\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
-  .lg\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .lg\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
   .lg\:px-\[100px\] {
@@ -1453,11 +1308,16 @@ video {
     padding-bottom: 5rem;
   }
 
-  .lg\:pt-5 {
-    padding-top: 1.25rem;
+  .lg\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 
   .lg\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
   }
 }
