--- a/src/output.css
+++ b/src/output.css
@@ -601,6 +601,10 @@ video {
   right: 0px;
 }
 
+.-left-56 {
+  left: -14rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -617,24 +621,12 @@ video {
   right: 0px;
 }
 
-.top-\[-90px\] {
-  top: -90px;
-}
-
-.top-full {
-  top: 100%;
-}
-
-.left-56 {
-  left: 14rem;
-}
-
 .top-11 {
   top: 2.75rem;
 }
 
-.-left-56 {
-  left: -14rem;
+.top-\[-90px\] {
+  top: -90px;
 }
 
 .z-10 {
@@ -664,19 +656,18 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
+.mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
 }
 
 .mb-3 {
@@ -695,16 +686,20 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.ml-16 {
-  margin-left: 4rem;
-}
-
 .ml-24 {
   margin-left: 6rem;
 }
 
+.ml-9 {
+  margin-left: 2.25rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-2 {
@@ -739,16 +734,24 @@ video {
   margin-top: 2rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.ml-9 {
-  margin-left: 2.25rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .block {
@@ -771,10 +774,6 @@ video {
   display: none;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-12 {
   height: 3rem;
 }
@@ -795,8 +794,28 @@ video {
   height: 91px;
 }
 
-.w-10 {
-  width: 2.5rem;
+.h-48 {
+  height: 12rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[74\] {
+  height: 74;
+}
+
+.h-\[74px\] {
+  height: 74px;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-40 {
@@ -817,6 +836,30 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[87\] {
+  width: 87;
+}
+
+.w-\[87px\] {
+  width: 87px;
 }
 
 .flex-shrink-0 {
@@ -904,6 +947,30 @@ video {
   gap: 22px;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-\[px\] {
+  gap: px;
+}
+
+.gap-\[58px\] {
+  gap: 58px;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-\[5px\] {
+  gap: 5px;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
 .gap-y-3 {
   row-gap: 0.75rem;
 }
@@ -922,10 +989,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .border-t {
@@ -979,6 +1042,10 @@ video {
   padding: 1rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .p-\[10px\] {
   padding: 10px;
 }
@@ -1013,6 +1080,56 @@ video {
   padding-bottom: 25px;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.py-\[10\] {
+  padding-top: 10;
+  padding-bottom: 10;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.px-\[65px\] {
+  padding-left: 65px;
+  padding-right: 65px;
+}
+
+.px-\[px\] {
+  padding-left: px;
+  padding-right: px;
+}
+
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1043,6 +1160,14 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pt-40 {
+  padding-top: 10rem;
 }
 
 .text-center {
@@ -1101,6 +1226,10 @@ video {
   font-weight: 600;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .text-\[\#2CC2A5\] {
   --tw-text-opacity: 1;
   color: rgb(44 194 165 / var(--tw-text-opacity));
@@ -1121,9 +1250,33 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#\] {
+  color: #;
+}
+
+.text-\[\#1D183A\] {
+  --tw-text-opacity: 1;
+  color: rgb(29 24 58 / var(--tw-text-opacity));
+}
+
+.text-\[\#333333\] {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1235,6 +1388,10 @@ video {
     left: 10rem;
   }
 
+  .lg\:-bottom-44 {
+    bottom: -11rem;
+  }
+
   .lg\:m-0 {
     margin: 0px;
   }
@@ -1253,10 +1410,6 @@ video {
 
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:h-96 {
-    height: 24rem;
   }
 
   .lg\:h-\[486px\] {
